Optimized Integer, Short allocations.
Prior to Java 5, the only way to create a new Integer or Short object
from a int or short was to use new to create a whole new object.

Java 5 adds Integer.valueOf(int) and Short.valueOf(int), which will allow
you to re-use immutable canonical copies of small values (-128 -> 127)
rather than constantly spamming the heap with duplicate immutable objects
for these values.

By making these changes, we may achieve some small memory/performance saving
on both the server and client.

-- Jon