@@ -17,7 +17,7 @@
 	    
    Ganymede Directory Management System
  
-   Copyright (C) 1996-2005
+   Copyright (C) 1996-2009
    The University of Texas at Austin
 
    Contact information
@@ -406,7 +406,7 @@ class objectPane extends JPanel implements JsetValueCallback, Runnable {
 
     // Get the list of possible objects
 
-    Short key = new Short(type);
+    Short key = Short.valueOf(type);
 
     try
       {
