@@ -21,7 +21,7 @@
 	    
    Ganymede Directory Management System
  
-   Copyright (C) 1996-2008
+   Copyright (C) 1996-2009
    The University of Texas at Austin
 
    Contact information
@@ -196,7 +196,7 @@ public class FieldOptionDBField extends DBField implements field_option_field {
       {
 	try
 	  {
-	    basenum = new Short(entry.substring(0, sepIndex)).shortValue();
+	    basenum = Short.valueOf(entry.substring(0, sepIndex)).shortValue();
 	    base = (DBObjectBase) Ganymede.db.getObjectBase(basenum);
 
 	    if (base == null)
@@ -246,7 +246,7 @@ public class FieldOptionDBField extends DBField implements field_option_field {
       {
 	try
 	  {
-	    basenum = new Short(entry.substring(0, sepIndex)).shortValue();
+	    basenum = Short.valueOf(entry.substring(0, sepIndex)).shortValue();
 	    base = (DBObjectBase) Ganymede.db.getObjectBase(basenum);
 
 	    if (base == null)
@@ -265,7 +265,7 @@ public class FieldOptionDBField extends DBField implements field_option_field {
 		  {
 		    try
 		      {
-			fieldnum = new Short(fieldId).shortValue();
+			fieldnum = Short.valueOf(fieldId).shortValue();
 
 			field = (DBObjectBaseField) base.getField(fieldnum);
 
@@ -338,7 +338,7 @@ public class FieldOptionDBField extends DBField implements field_option_field {
 
     try
       {
-	basenum = new Short(entry.substring(0, sepIndex)).shortValue();
+	basenum = Short.valueOf(entry.substring(0, sepIndex)).shortValue();
 	base = (DBObjectBase) Ganymede.db.getObjectBase(basenum);
 
 	if (base == null)
@@ -353,7 +353,7 @@ public class FieldOptionDBField extends DBField implements field_option_field {
 	      {
 		try
 		  {
-		    fieldnum = new Short(fieldId).shortValue();
+		    fieldnum = Short.valueOf(fieldId).shortValue();
 		    
 		    field = (DBObjectBaseField) base.getField(fieldnum);
 		    
@@ -682,7 +682,7 @@ public class FieldOptionDBField extends DBField implements field_option_field {
 
   public Object key()
   {
-    return new Integer(owner.getID());
+    return Integer.valueOf(owner.getID());
   }
 
   /**
